cParser.py
# Generated from c.g4 by ANTLR 4.7.2
# encoding: utf-8
from antlr4 import *
from io import StringIO
from typing.io import TextIO
import sys




class cParser ( Parser ):

    grammarFileName = "c.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ "<INVALID>", "'('", "')'", "'['", "']'", "'.'", "'->'", 
                     "'++'", "'--'", "'+'", "'-'", "'*'", "'!'", "'/'", 
                     "'%'", "'<'", "'>'", "'<='", "'>='", "'=='", "'!='", 
                     "'&&'", "'||'", "'?'", "':'", "','", "'='", "'...'", 
                     "'{'", "'}'", "',}'", "<INVALID>", "<INVALID>", "<INVALID>", 
                     "<INVALID>", "'break'", "'case'", "'char'", "'continue'", 
                     "'default'", "'double'", "'else'", "'float'", "'for'", 
                     "'goto'", "'if'", "'int'", "'return'", "'struct'", 
                     "'switch'", "'void'", "'while'", "<INVALID>", "';'" ]

    symbolicNames = [ "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "ASSIGNMENT_OPERATOR", 
                      "IDENTIFIER", "CONSTANT", "STRING_LITERAL", "KEYWORD_BREAK", 
                      "KEYWORD_CASE", "KEYWORD_CHAR", "KEYWORD_CONTINUE", 
                      "KEYWORD_DEFAULT", "KEYWORD_DOUBLE", "KEYWORD_ELSE", 
                      "KEYWORD_FLOAT", "KEYWORD_FOR", "KEYWORD_GOTO", "KEYWORD_IF", 
                      "KEYWORD_INT", "KEYWORD_RETURN", "KEYWORD_STRUCT", 
                      "KEYWORD_SWITCH", "KEYWORD_VOID", "KEYWORD_WHILE", 
                      "WS", "EOS" ]

    RULE_program = 0
    RULE_primary_expression = 1
    RULE_postfix_expression = 2
    RULE_unary_expression = 3
    RULE_unary_operator = 4
    RULE_cast_expression = 5
    RULE_multiplicative_expression = 6
    RULE_additive_expression = 7
    RULE_shift_expression = 8
    RULE_relational_expression = 9
    RULE_equality_expression = 10
    RULE_logical_AND_expression = 11
    RULE_logical_OR_expression = 12
    RULE_conditional_expression = 13
    RULE_assignment_expression = 14
    RULE_argument_expression_list = 15
    RULE_expression = 16
    RULE_constant_expression = 17
    RULE_declaration = 18
    RULE_declaration_specifiers = 19
    RULE_init_declarator_list = 20
    RULE_init_declarator = 21
    RULE_type_specifier = 22
    RULE_specifier_qualifier_list = 23
    RULE_declarator = 24
    RULE_direct_declarator = 25
    RULE_pointer = 26
    RULE_parameter_type_list = 27
    RULE_parameter_list = 28
    RULE_parameter_declaration = 29
    RULE_identifier_list = 30
    RULE_type_name = 31
    RULE_initializer = 32
    RULE_initializer_list = 33
    RULE_designation = 34
    RULE_designator_list = 35
    RULE_designator = 36
    RULE_statement = 37
    RULE_labeled_statement = 38
    RULE_compound_statement = 39
    RULE_block_item_list = 40
    RULE_block_item = 41
    RULE_expression_statement = 42
    RULE_selection_statement = 43
    RULE_iteration_statement = 44
    RULE_jump_statement = 45
    RULE_external_declaration = 46
    RULE_function_definition = 47
    RULE_declaration_list = 48

    ruleNames =  [ "program", "primary_expression", "postfix_expression", 
                   "unary_expression", "unary_operator", "cast_expression", 
                   "multiplicative_expression", "additive_expression", "shift_expression", 
                   "relational_expression", "equality_expression", "logical_AND_expression", 
                   "logical_OR_expression", "conditional_expression", "assignment_expression", 
                   "argument_expression_list", "expression", "constant_expression", 
                   "declaration", "declaration_specifiers", "init_declarator_list", 
                   "init_declarator", "type_specifier", "specifier_qualifier_list", 
                   "declarator", "direct_declarator", "pointer", "parameter_type_list", 
                   "parameter_list", "parameter_declaration", "identifier_list", 
                   "type_name", "initializer", "initializer_list", "designation", 
                   "designator_list", "designator", "statement", "labeled_statement", 
                   "compound_statement", "block_item_list", "block_item", 
                   "expression_statement", "selection_statement", "iteration_statement", 
                   "jump_statement", "external_declaration", "function_definition", 
                   "declaration_list" ]

    EOF = Token.EOF
    T__0=1
    T__1=2
    T__2=3
    T__3=4
    T__4=5
    T__5=6
    T__6=7
    T__7=8
    T__8=9
    T__9=10
    T__10=11
    T__11=12
    T__12=13
    T__13=14
    T__14=15
    T__15=16
    T__16=17
    T__17=18
    T__18=19
    T__19=20
    T__20=21
    T__21=22
    T__22=23
    T__23=24
    T__24=25
    T__25=26
    T__26=27
    T__27=28
    T__28=29
    T__29=30
    ASSIGNMENT_OPERATOR=31
    IDENTIFIER=32
    CONSTANT=33
    STRING_LITERAL=34
    KEYWORD_BREAK=35
    KEYWORD_CASE=36
    KEYWORD_CHAR=37
    KEYWORD_CONTINUE=38
    KEYWORD_DEFAULT=39
    KEYWORD_DOUBLE=40
    KEYWORD_ELSE=41
    KEYWORD_FLOAT=42
    KEYWORD_FOR=43
    KEYWORD_GOTO=44
    KEYWORD_IF=45
    KEYWORD_INT=46
    KEYWORD_RETURN=47
    KEYWORD_STRUCT=48
    KEYWORD_SWITCH=49
    KEYWORD_VOID=50
    KEYWORD_WHILE=51
    WS=52
    EOS=53

    def __init__(self, input:TokenStream, output:TextIO = sys.stdout):
        super().__init__(input, output)
        self.checkVersion("4.7.2")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None




    class ProgramContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def statement(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(cParser.StatementContext)
            else:
                return self.getTypedRuleContext(cParser.StatementContext,i)


        def declaration(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(cParser.DeclarationContext)
            else:
                return self.getTypedRuleContext(cParser.DeclarationContext,i)


        def external_declaration(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(cParser.External_declarationContext)
            else:
                return self.getTypedRuleContext(cParser.External_declarationContext,i)


        def getRuleIndex(self):
            return cParser.RULE_program

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterProgram" ):
                listener.enterProgram(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitProgram" ):
                listener.exitProgram(self)




    def program(self):

        localctx = cParser.ProgramContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_program)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 103
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while (((_la) & ~0x3f) == 0 and ((1 << _la) & ((1 << cParser.T__0) | (1 << cParser.T__8) | (1 << cParser.T__9) | (1 << cParser.T__10) | (1 << cParser.T__11) | (1 << cParser.T__27) | (1 << cParser.IDENTIFIER) | (1 << cParser.CONSTANT) | (1 << cParser.STRING_LITERAL) | (1 << cParser.KEYWORD_BREAK) | (1 << cParser.KEYWORD_CASE) | (1 << cParser.KEYWORD_CHAR) | (1 << cParser.KEYWORD_CONTINUE) | (1 << cParser.KEYWORD_DEFAULT) | (1 << cParser.KEYWORD_DOUBLE) | (1 << cParser.KEYWORD_FLOAT) | (1 << cParser.KEYWORD_FOR) | (1 << cParser.KEYWORD_GOTO) | (1 << cParser.KEYWORD_IF) | (1 << cParser.KEYWORD_INT) | (1 << cParser.KEYWORD_RETURN) | (1 << cParser.KEYWORD_SWITCH) | (1 << cParser.KEYWORD_VOID) | (1 << cParser.KEYWORD_WHILE) | (1 << cParser.EOS))) != 0):
                self.state = 101
                self._errHandler.sync(self)
                la_ = self._interp.adaptivePredict(self._input,0,self._ctx)
                if la_ == 1:
                    self.state = 98
                    self.statement()
                    pass

                elif la_ == 2:
                    self.state = 99
                    self.declaration()
                    pass

                elif la_ == 3:
                    self.state = 100
                    self.external_declaration()
                    pass


                self.state = 105
                self._errHandler.sync(self)
                _la = self._input.LA(1)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Primary_expressionContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def IDENTIFIER(self):
            return self.getToken(cParser.IDENTIFIER, 0)

        def CONSTANT(self):
            return self.getToken(cParser.CONSTANT, 0)

        def STRING_LITERAL(self):
            return self.getToken(cParser.STRING_LITERAL, 0)

        def expression(self):
            return self.getTypedRuleContext(cParser.ExpressionContext,0)


        def getRuleIndex(self):
            return cParser.RULE_primary_expression

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterPrimary_expression" ):
                listener.enterPrimary_expression(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitPrimary_expression" ):
                listener.exitPrimary_expression(self)




    def primary_expression(self):

        localctx = cParser.Primary_expressionContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_primary_expression)
        try:
            self.state = 113
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [cParser.IDENTIFIER]:
                self.enterOuterAlt(localctx, 1)
                self.state = 106
                self.match(cParser.IDENTIFIER)
                pass
            elif token in [cParser.CONSTANT]:
                self.enterOuterAlt(localctx, 2)
                self.state = 107
                self.match(cParser.CONSTANT)
                pass
            elif token in [cParser.STRING_LITERAL]:
                self.enterOuterAlt(localctx, 3)
                self.state = 108
                self.match(cParser.STRING_LITERAL)
                pass
            elif token in [cParser.T__0]:
                self.enterOuterAlt(localctx, 4)
                self.state = 109
                self.match(cParser.T__0)
                self.state = 110
                self.expression(0)
                self.state = 111
                self.match(cParser.T__1)
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Postfix_expressionContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def primary_expression(self):
            return self.getTypedRuleContext(cParser.Primary_expressionContext,0)


        def postfix_expression(self):
            return self.getTypedRuleContext(cParser.Postfix_expressionContext,0)


        def expression(self):
            return self.getTypedRuleContext(cParser.ExpressionContext,0)


        def argument_expression_list(self):
            return self.getTypedRuleContext(cParser.Argument_expression_listContext,0)


        def IDENTIFIER(self):
            return self.getToken(cParser.IDENTIFIER, 0)

        def getRuleIndex(self):
            return cParser.RULE_postfix_expression

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterPostfix_expression" ):
                listener.enterPostfix_expression(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitPostfix_expression" ):
                listener.exitPostfix_expression(self)



    def postfix_expression(self, _p:int=0):
        _parentctx = self._ctx
        _parentState = self.state
        localctx = cParser.Postfix_expressionContext(self, self._ctx, _parentState)
        _prevctx = localctx
        _startState = 4
        self.enterRecursionRule(localctx, 4, self.RULE_postfix_expression, _p)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 116
            self.primary_expression()
            self._ctx.stop = self._input.LT(-1)
            self.state = 141
            self._errHandler.sync(self)
            _alt = self._interp.adaptivePredict(self._input,5,self._ctx)
            while _alt!=2 and _alt!=ATN.INVALID_ALT_NUMBER:
                if _alt==1:
                    if self._parseListeners is not None:
                        self.triggerExitRuleEvent()
                    _prevctx = localctx
                    self.state = 139
                    self._errHandler.sync(self)
                    la_ = self._interp.adaptivePredict(self._input,4,self._ctx)
                    if la_ == 1:
                        localctx = cParser.Postfix_expressionContext(self, _parentctx, _parentState)
                        self.pushNewRecursionContext(localctx, _startState, self.RULE_postfix_expression)
                        self.state = 118
                        if not self.precpred(self._ctx, 6):
                            from antlr4.error.Errors import FailedPredicateException
                            raise FailedPredicateException(self, "self.precpred(self._ctx, 6)")
                        self.state = 119
                        self.match(cParser.T__2)
                        self.state = 120
                        self.expression(0)
                        self.state = 121
                        self.match(cParser.T__3)
                        pass

                    elif la_ == 2:
                        localctx = cParser.Postfix_expressionContext(self, _parentctx, _parentState)
                        self.pushNewRecursionContext(localctx, _startState, self.RULE_postfix_expression)
                        self.state = 123
                        if not self.precpred(self._ctx, 5):
                            from antlr4.error.Errors import FailedPredicateException
                            raise FailedPredicateException(self, "self.precpred(self._ctx, 5)")
                        self.state = 124
                        self.match(cParser.T__0)
                        self.state = 126
                        self._errHandler.sync(self)
                        _la = self._input.LA(1)
                        if (((_la) & ~0x3f) == 0 and ((1 << _la) & ((1 << cParser.T__0) | (1 << cParser.T__8) | (1 << cParser.T__9) | (1 << cParser.T__10) | (1 << cParser.T__11) | (1 << cParser.IDENTIFIER) | (1 << cParser.CONSTANT) | (1 << cParser.STRING_LITERAL))) != 0):
                            self.state = 125
                            self.argument_expression_list(0)


                        self.state = 128
                        self.match(cParser.T__1)
                        pass

                    elif la_ == 3:
                        localctx = cParser.Postfix_expressionContext(self, _parentctx, _parentState)
                        self.pushNewRecursionContext(localctx, _startState, self.RULE_postfix_expression)
                        self.state = 129
                        if not self.precpred(self._ctx, 4):
                            from antlr4.error.Errors import FailedPredicateException
                            raise FailedPredicateException(self, "self.precpred(self._ctx, 4)")
                        self.state = 130
                        self.match(cParser.T__4)
                        self.state = 131
                        self.match(cParser.IDENTIFIER)
                        pass

                    elif la_ == 4:
                        localctx = cParser.Postfix_expressionContext(self, _parentctx, _parentState)
                        self.pushNewRecursionContext(localctx, _startState, self.RULE_postfix_expression)
                        self.state = 132
                        if not self.precpred(self._ctx, 3):
                            from antlr4.error.Errors import FailedPredicateException
                            raise FailedPredicateException(self, "self.precpred(self._ctx, 3)")
                        self.state = 133
                        self.match(cParser.T__5)
                        self.state = 134
                        self.match(cParser.IDENTIFIER)
                        pass

                    elif la_ == 5:
                        localctx = cParser.Postfix_expressionContext(self, _parentctx, _parentState)
                        self.pushNewRecursionContext(localctx, _startState, self.RULE_postfix_expression)
                        self.state = 135
                        if not self.precpred(self._ctx, 2):
                            from antlr4.error.Errors import FailedPredicateException
                            raise FailedPredicateException(self, "self.precpred(self._ctx, 2)")
                        self.state = 136
                        self.match(cParser.T__6)
                        pass

                    elif la_ == 6:
                        localctx = cParser.Postfix_expressionContext(self, _parentctx, _parentState)
                        self.pushNewRecursionContext(localctx, _startState, self.RULE_postfix_expression)
                        self.state = 137
                        if not self.precpred(self._ctx, 1):
                            from antlr4.error.Errors import FailedPredicateException
                            raise FailedPredicateException(self, "self.precpred(self._ctx, 1)")
                        self.state = 138
                        self.match(cParser.T__7)
                        pass

             
                self.state = 143
                self._errHandler.sync(self)
                _alt = self._interp.adaptivePredict(self._input,5,self._ctx)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.unrollRecursionContexts(_parentctx)
        return localctx


    class Unary_expressionContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def postfix_expression(self):
            return self.getTypedRuleContext(cParser.Postfix_expressionContext,0)


        def unary_expression(self):
            return self.getTypedRuleContext(cParser.Unary_expressionContext,0)


        def unary_operator(self):
            return self.getTypedRuleContext(cParser.Unary_operatorContext,0)


        def cast_expression(self):
            return self.getTypedRuleContext(cParser.Cast_expressionContext,0)


        def getRuleIndex(self):
            return cParser.RULE_unary_expression

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterUnary_expression" ):
                listener.enterUnary_expression(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitUnary_expression" ):
                listener.exitUnary_expression(self)




    def unary_expression(self):

        localctx = cParser.Unary_expressionContext(self, self._ctx, self.state)
        self.enterRule(localctx, 6, self.RULE_unary_expression)
        try:
            self.state = 154
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,6,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 144
                self.postfix_expression(0)
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 145
                self.match(cParser.T__8)
                self.state = 146
                self.match(cParser.T__8)
                self.state = 147
                self.unary_expression()
                pass

            elif la_ == 3:
                self.enterOuterAlt(localctx, 3)
                self.state = 148
                self.match(cParser.T__9)
                self.state = 149
                self.match(cParser.T__9)
                self.state = 150
                self.unary_expression()
                pass

            elif la_ == 4:
                self.enterOuterAlt(localctx, 4)
                self.state = 151
                self.unary_operator()
                self.state = 152
                self.cast_expression()
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Unary_operatorContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser


        def getRuleIndex(self):
            return cParser.RULE_unary_operator

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterUnary_operator" ):
                listener.enterUnary_operator(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitUnary_operator" ):
                listener.exitUnary_operator(self)




    def unary_operator(self):

        localctx = cParser.Unary_operatorContext(self, self._ctx, self.state)
        self.enterRule(localctx, 8, self.RULE_unary_operator)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 156
            _la = self._input.LA(1)
            if not((((_la) & ~0x3f) == 0 and ((1 << _la) & ((1 << cParser.T__8) | (1 << cParser.T__9) | (1 << cParser.T__10) | (1 << cParser.T__11))) != 0)):
                self._errHandler.recoverInline(self)
            else:
                self._errHandler.reportMatch(self)
                self.consume()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Cast_expressionContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def unary_expression(self):
            return self.getTypedRuleContext(cParser.Unary_expressionContext,0)


        def type_name(self):
            return self.getTypedRuleContext(cParser.Type_nameContext,0)


        def cast_expression(self):
            return self.getTypedRuleContext(cParser.Cast_expressionContext,0)


        def getRuleIndex(self):
            return cParser.RULE_cast_expression

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterCast_expression" ):
                listener.enterCast_expression(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitCast_expression" ):
                listener.exitCast_expression(self)




    def cast_expression(self):

        localctx = cParser.Cast_expressionContext(self, self._ctx, self.state)
        self.enterRule(localctx, 10, self.RULE_cast_expression)
        try:
            self.state = 164
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,7,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 158
                self.unary_expression()
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 159
                self.match(cParser.T__0)
                self.state = 160
                self.type_name()
                self.state = 161
                self.match(cParser.T__1)
                self.state = 162
                self.cast_expression()
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Multiplicative_expressionContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def cast_expression(self):
            return self.getTypedRuleContext(cParser.Cast_expressionContext,0)


        def multiplicative_expression(self):
            return self.getTypedRuleContext(cParser.Multiplicative_expressionContext,0)


        def getRuleIndex(self):
            return cParser.RULE_multiplicative_expression

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterMultiplicative_expression" ):
                listener.enterMultiplicative_expression(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitMultiplicative_expression" ):
                listener.exitMultiplicative_expression(self)



    def multiplicative_expression(self, _p:int=0):
        _parentctx = self._ctx
        _parentState = self.state
        localctx = cParser.Multiplicative_expressionContext(self, self._ctx, _parentState)
        _prevctx = localctx
        _startState = 12
        self.enterRecursionRule(localctx, 12, self.RULE_multiplicative_expression, _p)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 167
            self.cast_expression()
            self._ctx.stop = self._input.LT(-1)
            self.state = 180
            self._errHandler.sync(self)
            _alt = self._interp.adaptivePredict(self._input,9,self._ctx)
            while _alt!=2 and _alt!=ATN.INVALID_ALT_NUMBER:
                if _alt==1:
                    if self._parseListeners is not None:
                        self.triggerExitRuleEvent()
                    _prevctx = localctx
                    self.state = 178
                    self._errHandler.sync(self)
                    la_ = self._interp.adaptivePredict(self._input,8,self._ctx)
                    if la_ == 1:
                        localctx = cParser.Multiplicative_expressionContext(self, _parentctx, _parentState)
                        self.pushNewRecursionContext(localctx, _startState, self.RULE_multiplicative_expression)
                        self.state = 169
                        if not self.precpred(self._ctx, 3):
                            from antlr4.error.Errors import FailedPredicateException
                            raise FailedPredicateException(self, "self.precpred(self._ctx, 3)")
                        self.state = 170
                        self.match(cParser.T__10)
                        self.state = 171
                        self.cast_expression()
                        pass

                    elif la_ == 2:
                        localctx = cParser.Multiplicative_expressionContext(self, _parentctx, _parentState)
                        self.pushNewRecursionContext(localctx, _startState, self.RULE_multiplicative_expression)
                        self.state = 172
                        if not self.precpred(self._ctx, 2):
                            from antlr4.error.Errors import FailedPredicateException
                            raise FailedPredicateException(self, "self.precpred(self._ctx, 2)")
                        self.state = 173
                        self.match(cParser.T__12)
                        self.state = 174
                        self.cast_expression()
                        pass

                    elif la_ == 3:
                        localctx = cParser.Multiplicative_expressionContext(self, _parentctx, _parentState)
                        self.pushNewRecursionContext(localctx, _startState, self.RULE_multiplicative_expression)
                        self.state = 175
                        if not self.precpred(self._ctx, 1):
                            from antlr4.error.Errors import FailedPredicateException
                            raise FailedPredicateException(self, "self.precpred(self._ctx, 1)")
                        self.state = 176
                        self.match(cParser.T__13)
                        self.state = 177
                        self.cast_expression()
                        pass

             
                self.state = 182
                self._errHandler.sync(self)
                _alt = self._interp.adaptivePredict(self._input,9,self._ctx)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.unrollRecursionContexts(_parentctx)
        return localctx


    class Additive_expressionContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def multiplicative_expression(self):
            return self.getTypedRuleContext(cParser.Multiplicative_expressionContext,0)


        def additive_expression(self):
            return self.getTypedRuleContext(cParser.Additive_expressionContext,0)


        def getRuleIndex(self):
            return cParser.RULE_additive_expression

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterAdditive_expression" ):
                listener.enterAdditive_expression(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitAdditive_expression" ):
                listener.exitAdditive_expression(self)


